Use new topic market.state.orderbook.l2.snapshot.v1